# wireguard-uwp-rs

./: Cargo.toml  README.md
appx/: AppxManifest.xml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: background.rs  config.rs  lib.rs  logging.rs  plugin.rs  utils.rs
plugin/: Cargo.toml
plugin/src/: background.rs  config.rs  lib.rs  logging.rs  plugin.rs  utils.rs
