[package]
name = "wireguard-uwp-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WireGuard UWP VPN plugin."

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.66"
base64 = "0.13"
boringtun = "0.5.2"
ipnetwork = "0.18"
quick-xml = { version = "0.22", features = ["serialize"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.11"
win_etw_macros = "0.1"
win_etw_provider = "0.1"
x25519-dalek = "2.0.0-pre.1"

[dependencies.windows]
version = "0.44.0"
features = [
    "implement",
    "ApplicationModel_Background",
    "ApplicationModel_Core",
    "Foundation_Collections",
    "Networking_Sockets",
    "Networking_Vpn",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WinRT",
]
