[package]
name = "wireguard-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WireGuard VPN plugin."

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
quick-xml = { version = "0.37.2", features = ["serialize"] }
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12.0"
win_etw_macros = "0.1"
win_etw_provider = "0.1"
windows-collections = "0.1.1"
windows-core = "0.60.1"

# boringtun = "0.6"
boringtun = { git = "https://github.com/cloudflare/boringtun.git" }
x25519-dalek = "2.0.1"

[dependencies.ipnetwork]
version = "0.21.1"
features = ["serde"]

[dependencies.windows]
version = "0.60.0"
features = [
    "ApplicationModel_Background",
    "ApplicationModel_Core",
    "Foundation_Collections",
    "Networking_Sockets",
    "Networking_Vpn",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WinRT",
]
